--- a/curso1/styles.css
+++ b/curso1/styles.css
@@ -1,9 +1,8 @@
-/*h1{
+h1{
     background: darkblue;
     color: lightgreen;
 }
 
-div{
     background: lightblue;
     color: darkblue;
 }
@@ -26,9 +25,8 @@ li {
     text-transform: uppercase;
 }
 
-*{
     font-weight: bold;
-}*/
+}
 
 /*atributos especificos
 [title="Netflix"]{
